# damn-convoluted-localization-rhoban

./: .gitignore  notes.md
Application/: Application.cpp  Application.hpp
Binding/: LocalisationBinding.hpp  Robocup.hpp
CameraState/: CameraState.cpp  CameraState.hpp
Filters/: Filter.cpp  Pipeline.hpp  ThreadPool.h
Filters/Ball/: BallByII.cpp
Filters/Basics/: PyrDown.cpp  PyrDown.hpp  Sources.cmake
Filters/Colors/: ColorConverter.cpp  ColorHSVBounding.cpp  ColorsFactory.cpp  Sources.cmake
Filters/Custom/: BallRadiusProvider.cpp  CustomFactory.cpp  EverythingByDNN.cpp  ObstacleMap.cpp  ObstacleMap.hpp  Sources.cmake  StereoImgProc.cpp  StereoImgProc.hpp  WhiteLines.cpp  WhiteLinesBirdview.cpp  WhiteLinesBirdview.hpp  WhiteLinesData.cpp  WhiteLinesData.hpp  YoloV5OpenVino.cpp  YoloV5OpenVino.hpp
Filters/Features/: FeaturesFactory.cpp  FeaturesProvider.cpp  FeaturesProvider.hpp  TagsDetectorSimpleCameraCalibration.hpp
Localisation/: RadarFilter.hpp
python/: camera_calibration_mono_aruco_rational.py  camera_calibration_mono_chess_rational_from_stereo_images.py  readme_sol.txt
vision_rewrite/: CMakeLists.txt  white_lines_detector.py
vision_rewrite/.cache/clangd/index/: test.cpp.00F4AE44CE7D0F91.idx
vision_rewrite/src/: test.cpp  white_lines.cpp
vision_rewrite/src/camera_state/: camera_state.cpp  camera_state.hpp
vision_rewrite/src/corner_candidate/: corner_candidate.hpp
vision_rewrite/src/prerequisites/: prerequisites.cpp  prerequisites.hpp
vision_rewrite/src/white_lines_data/: white_lines_data.cpp  white_lines_data.hpp
(+68 files in other folders)
